--- a/index.html
+++ b/index.html
@@ -8,53 +8,29 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Корзина</h1>
+    <h1 class="main-title">Корзина</h1>
     <div class="container">
       <!-- Товар 1 -->
       <div class="item">
-        <img class="item__img" src="assets/img/trousers.jpg" alt="trousers" />
-        <div class="item__description">
-          <h2 class="item__title">Ostin Брюки широкие</h2>
-          <p class="item__details">
-            Цвет: голубой<br />
-            Размер: S<br />
-            Количество: 1
-          </p>
+        <div class="item__img-wrapper">
+          <img class="item__img" src="assets/img/hoodie.jpg" alt="hoodie" />
         </div>
-        <div class="item__price">2 599 руб.</div>
-      </div>
-
-      <!-- Товар 2 -->
-      <div class="item">
-        <img class="item__img" src="assets/img/coat.jpg" alt="coat" />
         <div class="item__description">
-          <h2 class="item__title">Ostin Пальто с капюшоном</h2>
+          <h2 class="item__title">Ostin Базовая толстовка</h2>
           <p class="item__details">
             Цвет: слоновая кость<br />
             Размер: S<br />
             Количество: 1
           </p>
         </div>
-        <div class="item__price">3 999 руб.</div>
+        <div class="item__price">1 799 руб.</div>
       </div>
 
-      <!-- Товар 3 -->
+      <!-- Товар 2 -->
       <div class="item">
-        <img class="item__img" src="assets/img/hoodie.jpg" alt="hoodie" />
-        <div class="item__description">
-          <h2 class="item__title">Ostin Объёмная толстовка с принтом</h2>
-          <p class="item__details">
-            Цвет: розовый<br />
-            Размер: S<br />
-            Количество: 1
-          </p>
+        <div class="item__img-wrapper">
+          <img class="item__img" src="assets/img/dress.jpg" alt="dress" />
         </div>
-        <div class="item__price">999 руб.</div>
-      </div>
-
-      <!-- Товар 4 -->
-      <div class="item">
-        <img class="item__img" src="assets/img/dress.jpg" alt="dress" />
         <div class="item__description">
           <h2 class="item__title">Ostin Сарафан из сатина</h2>
           <p class="item__details">
@@ -66,21 +42,59 @@
         <div class="item__price">2 599 руб.</div>
       </div>
 
-      <!-- Товар 5 -->
+      <!-- Товар 3 -->
       <div class="item">
-        <img class="item__img" src="assets/img/jacket.jpg" alt="jacket" />
+        <div class="item__img-wrapper">
+          <img class="item__img" src="assets/img/jacket.jpg" alt="jacket" />
+        </div>
         <div class="item__description">
           <h2 class="item__title">Ostin Жакет без застёжки</h2>
           <p class="item__details">
-            Цвет: бежевый<br />
+            Цвет: серый<br />
             Размер: S<br />
             Количество: 1
           </p>
         </div>
         <div class="item__price">2 299 руб.</div>
       </div>
+
+      <!-- Товар 4 -->
+      <div class="item">
+        <div class="item__img-wrapper">
+          <img class="item__img" src="assets/img/coat.jpg" alt="jacket" />
+        </div>
+        <div class="item__description">
+          <h2 class="item__title">Ostin Длинное пальто-рубашка</h2>
+          <p class="item__details">
+            Цвет: графитовый<br />
+            Размер: S<br />
+            Количество: 1
+          </p>
+        </div>
+        <div class="item__price">3 799 руб.</div>
+      </div>
+
+      <!-- Товар 5 -->
+      <div class="item">
+        <div class="item__img-wrapper">
+          <img class="item__img" src="assets/img/trousers.jpg" alt="trousers" />
+        </div>
+        <div class="item__description">
+          <h2 class="item__title">Ostin Широкие брюки</h2>
+          <p class="item__details">
+            Цвет: жемчужно-серый<br />
+            Размер: S<br />
+            Количество: 1
+          </p>
+        </div>
+        <div class="item__price">2 599 руб.</div>
+      </div>
     </div>
 
+    <div class="count">
+      <button class="count__button">Использовать купон на 20%</button>
+      <div class="count__sum">Итого:</div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
