EventListener added to button

--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
     </div>
 
     <div class="count-container">
-      <button class="count__button" onclick="countDiscountedSum()">
-        Использовать купон на 20%
-      </button>
+      <button class="count__button">Использовать купон на 20%</button>
       <div class="count">
         <p>Итого:</p>
         <br />
